Fix placeholder z-index

--- a/src/Select/style.styl
+++ b/src/Select/style.styl
@@ -86,6 +86,7 @@ arrow()
   background-color white
   user-select none
   padding 0 2px
+  z-index 2
 
 .select_without-value
   label
